--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,67 @@
       type="image/x-icon"
       href="./assets/images/icons/favicon.ico"
     />
-    <title>Webpack - Develop - Building</title>
+    <title>Webpack - Bootstrap</title>
   </head>
   <body>
-    <div class="brand">
-      <img src="assets/images/icons/clear-view-escapes.svg" alt="" />
+    <div class="container mx-auto py-4 px-3">
+      <div class="brand">
+        <img src="assets/images/icons/clear-view-escapes.svg" alt="" />
+      </div>
+      <h1>Webpack</h1>
+      <h2>Page: Index</h2>
+      <a href="./bootstrap.html">
+        <button class="btn btn-primary">Bootstrap-Index</button></a
+      >
+      <button class="btn btn-danger open-measure">Measure</button>
+      <button
+        type="button"
+        class="btn btn-primary me-3"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasExample"
+      >
+        Toggle offcanvas
+      </button>
+
+      <div
+        class="offcanvas offcanvas-end"
+        tabindex="-1"
+        id="offcanvasExample"
+        aria-labelledby="offcanvasExampleLabel"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+          <button
+            type="button"
+            class="btn-close text-reset"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <div>
+            Some text as placeholder. In real life you can have the elements you
+            have chosen. Like, text, images, lists, etc.
+          </div>
+          <div class="dropdown mt-3">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton"
+              data-bs-toggle="dropdown"
+            >
+              Dropdown button
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <h1>Webpack !!!</h1>
-    <h2>Page: Index</h2>
-    <button class="btn open-measure">Measure</button>
-    <div id="measureME"></div>
+
+    <div id="measureME" style="text-align: center"><h3>measureME</h3></div>
   </body>
 </html>
