--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="brand">
         <img src="assets/images/icons/clear-view-escapes.svg" alt="" />
       </div>
-      <h1>Webpack !!</h1>
+      <h1>Webpack</h1>
       <h2>Page: Index</h2>
       <a href="./bootstrap.html">
         <button class="btn btn-primary">Bootstrap-Index</button></a
